// ============================================================
//  TVCompanyX — Physical Model (DBML / dbdiagram.io)
//  Database: PostgreSQL 15+
//  Updated: 2026-03-03
// ============================================================

Project TVCompanyX {
  database_type: 'PostgreSQL'
  Note: 'Система управления рекламными заявками телекомпании X'
}

// ─────────────────────────────────────────────
//  ENUMS
// ─────────────────────────────────────────────

Enum user_role {
  customer    [note: 'Заказчик рекламы']
  agent       [note: 'Агент, ведёт клиента']
  commercial  [note: 'Коммерческий директор']
  accountant  [note: 'Бухгалтер']
  admin       [note: 'Системный администратор']
  director    [note: 'Директор']
}

Enum application_status {
  pending             [note: 'Новая заявка, ожидает обработки']
  in_progress         [note: 'Агент обрабатывает']
  sent_to_commercial  [note: 'Отправлена на одобрение']
  approved            [note: 'Одобрена коммерческим директором']
  rejected            [note: 'Отклонена']
  paid                [note: 'Оплачена']
  overdue             [note: 'Просрочена']
}

Enum payment_method {
  card     [note: 'Банковская карта']
  transfer [note: 'Банковский перевод']
  cash     [note: 'Наличные']
}

Enum show_type {
  news        [note: 'Новости']
  entertainment [note: 'Развлекательное']
  sport       [note: 'Спортивное']
  documentary [note: 'Документальное']
  morning     [note: 'Утреннее шоу']
}

Enum contract_status {
  sent       [note: 'Договор отправлен клиенту']
  viewed     [note: 'Клиент просмотрел']
  downloaded [note: 'Клиент скачал']
  signed     [note: 'Подписан']
}

// ─────────────────────────────────────────────
//  TABLE: users
// ─────────────────────────────────────────────

Table users {
  id          uuid        [pk, default: `uuid_generate_v4()`, note: 'Уникальный идентификатор пользователя']
  first_name  varchar(100) [not null, note: 'Имя']
  last_name   varchar(100) [not null, note: 'Фамилия']
  middle_name varchar(100) [note: 'Отчество (необязательно)']
  email       citext       [unique, not null, note: 'Электронная почта (без учёта регистра)']
  password_hash text       [note: 'bcrypt хеш пароля']
  role        user_role    [not null, note: 'Роль пользователя в системе']
  is_active   boolean      [not null, default: true, note: 'Активен ли аккаунт']
  phone       varchar(30)  [note: 'Контактный телефон']
  created_at  timestamptz  [not null, default: `now()`, note: 'Дата регистрации']
  updated_at  timestamptz  [not null, default: `now()`, note: 'Дата последнего обновления']

  indexes {
    email [unique, name: 'idx_users_email']
    role  [name: 'idx_users_role']
    (last_name, first_name) [name: 'idx_users_fullname']
  }

  Note: 'Единая таблица пользователей. Роль определяет доступ (customer/agent/commercial/accountant/admin/director).'
}

// ─────────────────────────────────────────────
//  TABLE: shows
// ─────────────────────────────────────────────

Table shows {
  id                 uuid          [pk, default: `uuid_generate_v4()`]
  name               varchar(255)  [not null, note: 'Название телешоу']
  time_slot          varchar(50)   [not null, note: 'Временной слот эфира, напр. «08:00-09:00»']
  base_price_per_min numeric(12,2) [not null, note: 'Базовая цена за 1 минуту рекламы']
  show_type          show_type     [note: 'Тип шоу']
  description        text          [note: 'Описание программы']
  is_active          boolean       [not null, default: true, note: 'Шоу в эфире']
  created_at         timestamptz   [not null, default: `now()`]
  updated_at         timestamptz   [not null, default: `now()`]

  indexes {
    is_active [name: 'idx_shows_active']
    show_type [name: 'idx_shows_type']
  }

  Note: 'Справочник телевизионных программ, в которых возможна реклама.'
}

// ─────────────────────────────────────────────
//  TABLE: show_schedule
// ─────────────────────────────────────────────

Table show_schedule {
  id               uuid [pk, default: `uuid_generate_v4()`]
  show_id          uuid [not null, note: 'Ссылка на телешоу']
  scheduled_date   date [not null, note: 'Дата конкретного выпуска']
  duration_minutes int  [not null, note: 'Общая длительность выпуска в минутах. Ограничение: > 0']
  ad_minutes       int  [not null, default: 0, note: 'Количество рекламных минут в выпуске. Ограничение: >= 0']
  created_at       timestamptz [not null, default: `now()`]
  updated_at       timestamptz [not null, default: `now()`]

  indexes {
    (show_id, scheduled_date) [unique, name: 'uq_show_schedule_date', note: 'Один выпуск шоу в один день']
    scheduled_date [name: 'idx_schedule_date']
  }

  Note: 'Конкретные даты выхода шоу в эфир. Одна строка = один выпуск.'
}

// ─────────────────────────────────────────────
//  TABLE: applications
// ─────────────────────────────────────────────

Table applications {
  id               uuid               [pk, default: `uuid_generate_v4()`]
  customer_id      uuid               [not null, note: 'Заказчик рекламы']
  agent_id         uuid               [note: 'Агент (необязательно, NULL если клиент пришёл сам)']
  show_id          uuid               [not null, note: 'Телешоу, в котором размещается реклама']
  scheduled_at     timestamptz        [not null, note: 'Запланированная дата и время выхода рекламы']
  duration_seconds int                [not null, note: 'Длительность ролика в секундах. Ограничение: 5..300']
  status           application_status [not null, default: 'pending', note: 'Текущий статус заявки']
  cost             numeric(14,2)      [not null, default: 0, note: 'Рассчитанная стоимость размещения']
  description      text               [note: 'Дополнительное описание или пожелания клиента']
  contact_phone    varchar(30)        [note: 'Контактный телефон по данной заявке']
  payment_method   payment_method     [note: 'Способ оплаты']
  payment_date     timestamptz        [note: 'Фактическая дата оплаты']
  due_date         timestamptz        [note: 'Срок оплаты']
  created_at       timestamptz        [not null, default: `now()`]
  updated_at       timestamptz        [not null, default: `now()`]

  indexes {
    customer_id    [name: 'idx_applications_customer']
    agent_id       [name: 'idx_applications_agent']
    show_id        [name: 'idx_applications_show']
    status         [name: 'idx_applications_status']
    scheduled_at   [name: 'idx_applications_scheduled']
    (customer_id, status) [name: 'idx_applications_customer_status']
  }

  Note: 'Заявка на размещение рекламы. Центральная сущность системы. Проходит через статусы: pending → in_progress → sent_to_commercial → approved/rejected → paid/overdue.'
}

// ─────────────────────────────────────────────
//  TABLE: commissions
// ─────────────────────────────────────────────

Table commissions {
  id             uuid          [pk, default: `uuid_generate_v4()`]
  agent_id       uuid          [not null, note: 'Агент, получающий комиссию']
  application_id uuid          [not null, note: 'Заявка, по которой начислена комиссия']
  percent        numeric(5,2)  [not null, note: 'Процент комиссии агента. Ограничение: >= 0']
  amount         numeric(14,2) [not null, default: 0, note: 'Рассчитанная сумма комиссии в рублях']
  created_at     timestamptz   [not null, default: `now()`]

  indexes {
    (agent_id, application_id) [unique, name: 'uq_commission_agent_app', note: 'Одна комиссия агента на одну заявку']
    agent_id       [name: 'idx_commissions_agent']
    application_id [name: 'idx_commissions_app']
  }

  Note: 'Комиссионное вознаграждение агента по заявке. Рассчитывается автоматически при одобрении заявки.'
}

// ─────────────────────────────────────────────
//  TABLE: contracts
// ─────────────────────────────────────────────

Table contracts {
  id              uuid            [pk, default: `uuid_generate_v4()`]
  application_id  uuid            [not null, note: 'Заявка, по которой создан договор']
  contract_number varchar(50)     [unique, note: 'Номер договора, генерируется автоматически (DOG-YYYY-NNNNNN)']
  contract_date   timestamptz     [not null, default: `now()`, note: 'Дата подписания договора']
  cost            numeric(14,2)   [not null, default: 0, note: 'Стоимость, зафиксированная в договоре']
  description     text            [note: 'Дополнительные условия']
  status          contract_status [not null, default: 'sent', note: 'Статус договора']
  created_at      timestamptz     [not null, default: `now()`]
  updated_at      timestamptz     [not null, default: `now()`]

  indexes {
    application_id  [unique, name: 'uq_contracts_application', note: 'Один договор на одну заявку']
    contract_number [unique, name: 'uq_contracts_number']
    status          [name: 'idx_contracts_status']
    created_at      [name: 'idx_contracts_created_at']
  }

  Note: 'Договор создаётся автоматически при одобрении заявки. Один договор — одна заявка (1:1).'
}

// ─────────────────────────────────────────────
//  TABLE: chat_messages
// ─────────────────────────────────────────────

Table chat_messages {
  id          uuid        [pk, default: `uuid_generate_v4()`]
  room_id     varchar(255) [not null, note: 'Идентификатор комнаты чата (например: «app-42», «support-general»)']
  sender_id   uuid        [note: 'Пользователь-отправитель (NULL = системное сообщение)']
  content     text        [not null, note: 'Текст сообщения']
  created_at  timestamptz [not null, default: `now()`]

  indexes {
    room_id    [name: 'idx_chat_room']
    sender_id  [name: 'idx_chat_sender']
    (room_id, created_at) [name: 'idx_chat_room_time', note: 'Быстрая загрузка истории комнаты']
  }

  Note: 'Сообщения чата. room_id — текстовый ключ комнаты, объединяющий участников (по заявке, по роли и т.д.).'
}

// ─────────────────────────────────────────────
//  TABLE: notifications
// ─────────────────────────────────────────────

Table notifications {
  id         uuid        [pk, default: `uuid_generate_v4()`]
  user_id    uuid        [not null, note: 'Получатель уведомления']
  type       varchar(50) [not null, note: 'Код типа уведомления (application_approved, payment_due и т.д.)']
  title      varchar(255) [not null, note: 'Заголовок уведомления']
  message    text        [not null, note: 'Текст уведомления']
  is_read    boolean     [not null, default: false, note: 'Прочитано ли пользователем']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    user_id              [name: 'idx_notifications_user']
    (user_id, is_read)   [name: 'idx_notifications_user_unread', note: 'Быстрый подсчёт непрочитанных']
    created_at           [name: 'idx_notifications_created']
  }

  Note: 'Push-уведомления пользователям. Генерируются триггерами при изменении статусов заявок.'
}

// ─────────────────────────────────────────────
//  TABLE: audit_log
// ─────────────────────────────────────────────

Table audit_log {
  id          bigserial   [pk, increment, note: 'Порядковый номер записи аудита']
  entity      varchar(100) [not null, note: 'Название таблицы (applications, users и т.д.)']
  entity_id   uuid        [not null, note: 'ID изменённой записи']
  action      varchar(20) [not null, note: 'Тип действия: INSERT | UPDATE | DELETE | STATUS_CHANGE']
  changed_by  uuid        [note: 'Пользователь, совершивший действие (NULL = система/триггер)']
  changed_at  timestamptz [not null, default: `now()`]
  payload     jsonb       [note: 'Дельта изменений в формате JSON: {old: {...}, new: {...}}']

  indexes {
    (entity, entity_id) [name: 'idx_audit_entity']
    changed_by          [name: 'idx_audit_actor']
    changed_at          [name: 'idx_audit_time']
  }

  Note: 'Журнал аудита всех значимых изменений. Заполняется триггерами. Используется для отчётности и разбора инцидентов.'
}

// ─────────────────────────────────────────────
//  REFERENCES (Relationships)
// ─────────────────────────────────────────────

// Пользователь → Заявка (как заказчик)
Ref fk_app_customer: applications.customer_id > users.id [delete: restrict, update: cascade]

// Пользователь → Заявка (как агент, необязательно)
Ref fk_app_agent: applications.agent_id > users.id [delete: set null, update: cascade]

// Телешоу → Заявка
Ref fk_app_show: applications.show_id > shows.id [delete: restrict, update: cascade]

// Телешоу → Расписание шоу
Ref fk_schedule_show: show_schedule.show_id > shows.id [delete: cascade, update: cascade]

// Пользователь → Комиссия (агент)
Ref fk_commission_agent: commissions.agent_id > users.id [delete: cascade, update: cascade]

// Заявка → Комиссия
Ref fk_commission_app: commissions.application_id > applications.id [delete: cascade, update: cascade]

// Заявка → Договор (1:1)
Ref fk_contract_app: contracts.application_id > applications.id [delete: cascade, update: cascade]

// Пользователь → Сообщение чата (отправитель)
Ref fk_chat_sender: chat_messages.sender_id > users.id [delete: set null, update: cascade]

// Пользователь → Уведомление
Ref fk_notification_user: notifications.user_id > users.id [delete: cascade, update: cascade]

// Пользователь → Журнал аудита (автор изменения)
Ref fk_audit_actor: audit_log.changed_by > users.id [delete: set null, update: cascade]
